--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
     "@headlessui/react": "^1.7.2",
+    "@heroicons/react": "^2.0.13",
     "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.8",
     "autoprefixer": "^10.4.12",
     "axios": "^1.2.1",
     "clsx": "^1.2.1",
